# opencv_test

./: CMakeLists.txt  LICENSE  README.md  main.cpp
